# exachem-ase

./: LICENSE  README.md  pyproject.toml
exachem/: calc.py
tests/: test_ase.py
tests/files/: template.json
tests/files/outputs/ccsd/: exachem.json  exachem.out
tests/files/outputs/ccsd/exachem.cc-pvdz_files/restricted/: exachem.cc-pvdz.lcao
tests/files/outputs/ccsd/exachem.cc-pvdz_files/restricted/json/: exachem.cc-pvdz.ccsd.json
tests/files/outputs/mp2/: exachem.json  exachem.out
tests/files/outputs/mp2/exachem.cc-pvdz_files/restricted/: exachem.cc-pvdz.lcao  exachem.cc-pvdz.sinfo.json
tests/files/outputs/scf/: exachem.json  exachem.out
tests/files/outputs/scf/exachem.cc-pvdz_files/restricted/json/: exachem.cc-pvdz.scf.json
