[project]
name = "exachem-ase"
version = "0.0.1"
authors = [
    { name = "Logan Ward", email = "lward@anl.gov" },
]
description = 'Python interface to ExaChem'
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
keywords = ["HPC", "Quantum Chemistry", "Chemical Engineering"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: System :: Distributed Computing",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "ase>=3.22",
]

[tool.setuptools.packages.find]
include = ['exachem*']

[project.urls]
repository = "https://github.com/exalearn/exachem-ase"

[project.optional-dependencies]
test = [
    'flake8',
    'pytest',
    'pytest-cov',
]
